--- a/src/main/resources/org/example/bomberman/hello-view.fxml
+++ b/src/main/resources/org/example/bomberman/hello-view.fxml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="262.0" prefWidth="348.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="org.example.bomberman.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-
-    <Label fx:id="welcomeText" />
-   <Label fx:id="welcomeLabel" text="Welcome to K69A-AI2" textFill="#fa0505">
-      <font>
-         <Font name="Comic Sans MS Bold" size="21.0" />
-      </font>
-   </Label>
-    <Button alignment="CENTER" contentDisplay="CENTER" onAction="#onHelloButtonClick" prefHeight="22.0" prefWidth="40.0" text="Hello!" textAlignment="CENTER" />
-   <Button fx:id="welcomeButton" mnemonicParsing="false" onAction="#onWelcomeButtonClick" text="Welcome" />
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.bomberman.HelloController">
+   <children>
+      <AnchorPane prefHeight="720.0" prefWidth="1280.0">
+         <children>
+            <ImageView fitHeight="150.0" layoutX="604.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="logoImage" fitHeight="1080.0" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@game1.jpg" />
+               </image>
+            </ImageView>
+            <Button fx:id="startButton" alignment="CENTER" contentDisplay="CENTER" layoutX="882.0" layoutY="655.0" mnemonicParsing="false" onAction="#switchToLoadingView" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" styleClass="zoom-effect" stylesheets="@style1.css" text="Start" textAlignment="CENTER" textFill="#ccc6c6" underline="true">
+               <font>
+                  <Font name="System Bold" size="48.0" />
+               </font>
+            </Button>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="588.0" layoutY="357.0" prefHeight="182.0" prefWidth="767.0" text="Welcome to BomberMan" textAlignment="CENTER" textFill="#d4d3d3">
+               <font>
+                  <Font name="System Bold Italic" size="36.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </children>
 </VBox>
