--- a/src/main/resources/hoyocon/bomberman/Menu-view.fxml
+++ b/src/main/resources/hoyocon/bomberman/Menu-view.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hoyocon.bomberman.MenuController">
    <children>
       <ImageView fitHeight="1080.0" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@b0cf517597fd9ae3948d3181b1db2736.jpg" />
          </image>
       </ImageView>
-      <Button layoutX="821.0" layoutY="303.0" mnemonicParsing="false" text="Continue">
+      <Button layoutX="885.0" layoutY="290.0" mnemonicParsing="false" text="Continue">
          <stylesheets>
             <URL value="@style1.css" />
             <URL value="@Cartoon_UI.css" />
@@ -23,7 +23,7 @@
             <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
          </styleClass></Button>
-      <Button layoutX="830.0" layoutY="422.0" mnemonicParsing="false" text="Button">
+      <Button layoutX="870.0" layoutY="609.0" mnemonicParsing="false" onAction="#onSaveScoreClicked" text="Save Score">
          <stylesheets>
             <URL value="@Cartoon_UI.css" />
             <URL value="@style1.css" />
@@ -32,7 +32,7 @@
             <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
          </styleClass></Button>
-      <Button layoutX="830.0" layoutY="549.0" mnemonicParsing="false" text="Button">
+      <Button layoutX="831.0" layoutY="508.0" mnemonicParsing="false" text="⚙ Select Difficulty">
          <stylesheets>
             <URL value="@Cartoon_UI.css" />
             <URL value="@style1.css" />
@@ -41,5 +41,25 @@
             <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
          </styleClass></Button>
+      <Button layoutX="875.0" layoutY="392.0" mnemonicParsing="false" text="New Game">
+         <stylesheets>
+            <URL value="@Cartoon_UI.css" />
+            <URL value="@style1.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="button-cartoon" />
+            <String fx:value="zoom-effect" />
+         </styleClass>
+      </Button>
+      <Button layoutX="874.0" layoutY="702.0" mnemonicParsing="false" onAction="#onExitClicked" text="Quit Game">
+         <stylesheets>
+            <URL value="@Cartoon_UI.css" />
+            <URL value="@style1.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="button-cartoon" />
+            <String fx:value="zoom-effect" />
+         </styleClass>
+      </Button>
    </children>
 </AnchorPane>
