--- a/src/main/resources/hoyocon/bomberman/Start-view.fxml
+++ b/src/main/resources/hoyocon/bomberman/Start-view.fxml
@@ -8,19 +8,19 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hoyocon.bomberman.StartController">
    <children>
-      <ImageView fitHeight="1080.0" fitWidth="1920.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="1080.0" fitWidth="1920.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@b0cf517597fd9ae3948d3181b1db2736.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="292.0" fitWidth="599.0" layoutX="712.0" layoutY="87.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="292.0" fitWidth="599.0" layoutX="682.0" layoutY="87.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="884.0" layoutY="420.0" mnemonicParsing="false" text="Start">
+      <Button layoutX="899.0" layoutY="420.0" mnemonicParsing="false" text="Start">
          <font>
             <Font size="36.0" />
          </font>
@@ -33,7 +33,7 @@
             <String fx:value="button-cartoon" />
          </styleClass>
       </Button>
-      <Button layoutX="880.0" layoutY="555.0" mnemonicParsing="false" text="MENU">
+      <Button layoutX="895.0" layoutY="615.0" mnemonicParsing="false" onAction="#onMenuClicked" text="MENU">
          <font>
             <Font size="36.0" />
          </font>
@@ -45,6 +45,16 @@
             <URL value="@style1.css" />
             <URL value="@Cartoon_UI.css" />
          </stylesheets>
+      </Button>
+      <Button layoutX="866.0" layoutY="518.0" mnemonicParsing="false" text="How To Play">
+         <stylesheets>
+            <URL value="@style1.css" />
+            <URL value="@Cartoon_UI.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="button-cartoon" />
+            <String fx:value="zoom-effect" />
+         </styleClass>
       </Button>
    </children>
 </AnchorPane>
