--- a/src/main/resources/hoyocon/bomberman/Start-view.fxml
+++ b/src/main/resources/hoyocon/bomberman/Start-view.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hoyocon.bomberman.Object.StartController"
->
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hoyocon.bomberman.Object.StartController">
    <children>
       <ImageView fitHeight="1080.0" fitWidth="1920.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -21,7 +20,7 @@
             <Image url="@logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="899.0" layoutY="420.0" mnemonicParsing="false" text="Start">
+      <Button layoutX="899.0" layoutY="420.0" mnemonicParsing="false" onAction="#onStartClicked" text="Start">
          <font>
             <Font size="36.0" />
          </font>
