--- a/src/main/resources/hoyocon/bomberman/Menu-view.fxml
+++ b/src/main/resources/hoyocon/bomberman/Menu-view.fxml
@@ -23,7 +23,7 @@
             <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
          </styleClass></Button>
-      <Button layoutX="870.0" layoutY="609.0" mnemonicParsing="false" onAction="#onSaveScoreClicked" text="Save Score">
+      <Button layoutX="866.0" layoutY="611.0" mnemonicParsing="false" onAction="#onSaveScoreClicked" prefHeight="60.0" prefWidth="187.0" text="Save Score">
          <stylesheets>
             <URL value="@Cartoon_UI.css" />
             <URL value="@style1.css" />
@@ -51,10 +51,20 @@
             <String fx:value="zoom-effect" />
          </styleClass>
       </Button>
-      <Button layoutX="874.0" layoutY="702.0" mnemonicParsing="false" onAction="#onExitClicked" text="Quit Game">
+      <Button layoutX="866.0" layoutY="793.0" mnemonicParsing="false" onAction="#onExitClicked" prefHeight="60.0" prefWidth="187.0" text="Quit Game">
          <stylesheets>
             <URL value="@Cartoon_UI.css" />
             <URL value="@style1.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="button-cartoon" />
+            <String fx:value="zoom-effect" />
+         </styleClass>
+      </Button>
+      <Button fx:id="autoPlayButton" alignment="CENTER" contentDisplay="CENTER" layoutX="842.0" layoutY="701.0" mnemonicParsing="false" onAction="#onAutoPlayClicked" prefHeight="60.0" prefWidth="235.0" text="Auto Play">
+         <stylesheets>
+            <URL value="@style1.css" />
+            <URL value="@Cartoon_UI.css" />
          </stylesheets>
          <styleClass>
             <String fx:value="button-cartoon" />
