--- a/src/main/resources/hoyocon/bomberman/Menu-view.fxml
+++ b/src/main/resources/hoyocon/bomberman/Menu-view.fxml
@@ -6,70 +6,101 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hoyocon.bomberman.MenuController">
    <children>
       <ImageView fitHeight="1080.0" fitWidth="1920.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@b0cf517597fd9ae3948d3181b1db2736.jpg" />
+            <Image url="@Image.jpg" />
          </image>
       </ImageView>
-      <Button layoutX="885.0" layoutY="290.0" mnemonicParsing="false" onAction="#onContinueClicked" text="Continue">
+      <Button layoutX="850.0" layoutY="245.0" mnemonicParsing="false" onAction="#onContinueClicked" prefHeight="74.0" prefWidth="219.0" text="Continue" textFill="WHITE" underline="true">
+         <styleClass>
+            <String fx:value="invisible-button" />
+            <String fx:value="zoom-effect" />
+            <String fx:value="color-change" />
+         </styleClass>
          <stylesheets>
             <URL value="@style1.css" />
-            <URL value="@Cartoon_UI.css" />
+            <URL value="@style2.css" />
+            <URL value="@../../CSS/ColorChange.css" />
+         </stylesheets>
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font></Button>
+      <Button layoutX="823.0" layoutY="567.0" mnemonicParsing="false" onAction="#onSaveScoreClicked" prefHeight="72.0" prefWidth="276.0" text="Save Level" textFill="WHITE" underline="true">
+         <stylesheets>
+            <URL value="@style1.css" />
+            <URL value="@style2.css" />
+            <URL value="@../../CSS/ColorChange.css" />
          </stylesheets>
          <styleClass>
-            <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
+            <String fx:value="invisible-button" />
+            <String fx:value="color-change" />
+         </styleClass>
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font></Button>
+      <Button layoutX="743.0" layoutY="468.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="435.0" text="⚙ Select Difficulty" textFill="WHITE" underline="true">
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font>
+         <stylesheets>
+            <URL value="@style1.css" />
+            <URL value="@style2.css" />
+            <URL value="@../../CSS/ColorChange.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="zoom-effect" />
+            <String fx:value="invisible-button" />
+            <String fx:value="color-change" />
          </styleClass></Button>
-      <Button layoutX="866.0" layoutY="611.0" mnemonicParsing="false" onAction="#onSaveScoreClicked" prefHeight="60.0" prefWidth="187.0" text="Save Score">
+      <Button layoutX="836.0" layoutY="360.0" mnemonicParsing="false" onAction="#onStartClicked" text="New Game" textFill="WHITE" underline="true">
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font>
          <stylesheets>
-            <URL value="@Cartoon_UI.css" />
             <URL value="@style1.css" />
+            <URL value="@style2.css" />
+            <URL value="@../../CSS/ColorChange.css" />
          </stylesheets>
          <styleClass>
-            <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
-         </styleClass></Button>
-      <Button layoutX="831.0" layoutY="508.0" mnemonicParsing="false" text="⚙ Select Difficulty">
-         <stylesheets>
-            <URL value="@Cartoon_UI.css" />
-            <URL value="@style1.css" />
-         </stylesheets>
-         <styleClass>
-            <String fx:value="button-cartoon" />
-            <String fx:value="zoom-effect" />
-         </styleClass></Button>
-      <Button layoutX="875.0" layoutY="392.0" mnemonicParsing="false" onAction="#onStartClicked" text="New Game">
-         <stylesheets>
-            <URL value="@Cartoon_UI.css" />
-            <URL value="@style1.css" />
-         </stylesheets>
-         <styleClass>
-            <String fx:value="button-cartoon" />
-            <String fx:value="zoom-effect" />
+            <String fx:value="invisible-button" />
+            <String fx:value="color-change" />
          </styleClass>
       </Button>
-      <Button layoutX="866.0" layoutY="793.0" mnemonicParsing="false" onAction="#onExitClicked" prefHeight="60.0" prefWidth="187.0" text="Quit Game">
+      <Button layoutX="831.0" layoutY="768.0" mnemonicParsing="false" onAction="#onExitClicked" prefHeight="72.0" prefWidth="261.0" text="Quit Game" textFill="WHITE" underline="true">
          <stylesheets>
-            <URL value="@Cartoon_UI.css" />
             <URL value="@style1.css" />
+            <URL value="@style2.css" />
+            <URL value="@../../CSS/ColorChange.css" />
          </stylesheets>
          <styleClass>
-            <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
+            <String fx:value="invisible-button" />
+            <String fx:value="color-change" />
          </styleClass>
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font>
       </Button>
-      <Button fx:id="autoPlayButton" alignment="CENTER" contentDisplay="CENTER" layoutX="842.0" layoutY="701.0" mnemonicParsing="false" onAction="#onAutoPlayClicked" prefHeight="60.0" prefWidth="235.0" text="Auto Play">
+      <Button fx:id="autoPlayButton" alignment="CENTER" contentDisplay="CENTER" layoutX="788.0" layoutY="665.0" mnemonicParsing="false" onAction="#onAutoPlayClicked" prefHeight="72.0" prefWidth="347.0" text="Auto Play" textFill="WHITE" underline="true">
          <stylesheets>
             <URL value="@style1.css" />
-            <URL value="@Cartoon_UI.css" />
+            <URL value="@style2.css" />
+            <URL value="@../../CSS/ColorChange.css" />
          </stylesheets>
          <styleClass>
-            <String fx:value="button-cartoon" />
             <String fx:value="zoom-effect" />
+            <String fx:value="invisible-button" />
+            <String fx:value="color-change" />
          </styleClass>
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font>
       </Button>
    </children>
 </AnchorPane>
