--- a/src/main/resources/hoyocon/bomberman/Start-view.fxml
+++ b/src/main/resources/hoyocon/bomberman/Start-view.fxml
@@ -27,7 +27,7 @@
       </ImageView>
 
       <!-- Start Button -->
-      <Button layoutX="805.0" layoutY="418.0" mnemonicParsing="false" onAction="#onStartClicked" prefHeight="86.0" prefWidth="311.0" text="Start" textAlignment="CENTER" textFill="WHITE" underline="true">
+      <Button layoutX="805.0" layoutY="336.0" mnemonicParsing="false" onAction="#onStartClicked" prefHeight="86.0" prefWidth="311.0" text="Start" textAlignment="CENTER" textFill="WHITE" underline="true">
          <font><Font name="System Bold" size="48.0" /></font>
          <stylesheets>
             <URL value="@style2.css" />
@@ -42,7 +42,7 @@
       </Button>
 
       <!-- How To Play Button -->
-      <Button layoutX="817.0" layoutY="521.0" mnemonicParsing="false" onAction="#onHowToPlayClicked" text="How To Play" textFill="WHITE" underline="true">
+      <Button layoutX="826.0" layoutY="530.0" mnemonicParsing="false" onAction="#onHowToPlayClicked" text="How To Play" textFill="WHITE" underline="true">
          <font>
             <Font name="System Bold" size="48.0" />
          </font>
@@ -124,7 +124,7 @@
             </styleClass>
          </Button>
       </StackPane>
-      <Button fx:id="onExitClicked" layoutX="837.0" layoutY="615.0" mnemonicParsing="false" onAction="#onExitClicked" prefHeight="86.0" prefWidth="262.0" text="Quit" textFill="WHITE" underline="true">
+      <Button fx:id="onExitClicked" layoutX="826.0" layoutY="818.0" mnemonicParsing="false" onAction="#onExitClicked" prefHeight="86.0" prefWidth="262.0" text="Quit" textFill="WHITE" underline="true">
          <font>
             <Font name="System Bold" size="48.0" />
          </font>
@@ -137,6 +137,51 @@
             <String fx:value="invisible-button" />
             <String fx:value="zoom-effect" />
             <String fx:value="color-change" />
+         </styleClass>
+      </Button>
+      <Button layoutX="797.0" layoutY="602.0" mnemonicParsing="false" prefHeight="102.0" prefWidth="343.0" text="Save Level" textFill="WHITE" underline="true">
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font>
+         <stylesheets>
+            <URL value="@style2.css" />
+            <URL value="@style1.css" />
+            <URL value="@../../CSS/ColorChange.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="color-change" />
+            <String fx:value="invisible-button" />
+            <String fx:value="zoom-effect" />
+         </styleClass>
+      </Button>
+      <Button fx:id="autoPlayButton" alignment="CENTER" contentDisplay="CENTER" layoutX="751.0" layoutY="704.0" mnemonicParsing="false" onAction="#onAutoPlayClicked" prefHeight="102.0" prefWidth="435.0" text="Auto Play" textFill="WHITE" underline="true">
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font>
+         <stylesheets>
+            <URL value="@../../CSS/ColorChange.css" />
+            <URL value="@style2.css" />
+            <URL value="@style1.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="color-change" />
+            <String fx:value="invisible-button" />
+            <String fx:value="zoom-effect" />
+         </styleClass>
+      </Button>
+      <Button layoutX="736.0" layoutY="422.0" mnemonicParsing="false" prefHeight="102.0" prefWidth="449.0" text="Play Top Level" textFill="WHITE" underline="true">
+         <font>
+            <Font name="System Bold" size="48.0" />
+         </font>
+         <stylesheets>
+            <URL value="@style2.css" />
+            <URL value="@style1.css" />
+            <URL value="@../../CSS/ColorChange.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="color-change" />
+            <String fx:value="invisible-button" />
+            <String fx:value="zoom-effect" />
          </styleClass>
       </Button>
    </children>
